# theo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  start.sh  test_llm.py
.cursor/rules/: project.mdc
.github/workflows/: deploy.yml
infra/aws-cdk/: app.py  requirements.txt  theo_stack.py
scripts/: deploy-infrastructure.sh  setup-secrets.sh
src/theo/: api.py  crew.py  main.py  threading.py
src/theo/config/: __init__.py  agents.yaml  bi_engineer_prompts.yaml  product_manager_prompts.yaml  supervisor_prompts.yaml  support_prompts.yaml  tasks.yaml  technical_writer_prompts.yaml
src/theo/tools/: bedrock.py  confluence.py  datadog.py  jira.py  metabase.py  slack.py
tests/: quick_test.py  simple_concurrent_test.py  test_concurrent_load.py  test_threading.py
