[project]
name = "theo"
version = "0.1.0"
description = "theo using crewAI"
authors = [{ name = "Martin Moscosa", email = "martin@utilityprofit.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]==0.119.0",
    "ddtrace==3.7.0",
    "fastapi>=0.110,<1.0.0",
    "uvicorn>=0.29,<1.0.0",
    "httpx>=0.28,<1.0.0",
    "slack_sdk>=3.27.0,<4.0.0",
    "boto3>=1.34.0,<2.0.0",
    "pydantic>=2.11,<3.0.0",
    "python-dotenv>=1.0,<2.0.0",
    "markdown-it-py>=3.0.0,<4.0.0"
]

[project.scripts]
theo = "theo.main:run"
run_crew = "theo.main:run"
train = "theo.main:train"
replay = "theo.main:replay"
test = "theo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"